# profeyelar

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
src/profeyelar/: __main__.py  launcher.py  parsing.py  preferences.py  profiling.py  ui.py
